fix video size on mobile for nyc project

--- a/app/assets/stylesheets/nyc-project.scss
+++ b/app/assets/stylesheets/nyc-project.scss
@@ -90,21 +90,21 @@
       grid-row: 2;
       grid-column: 1;
       justify-items: center;
-      
-  
+
       img, video {
-        max-width: 100vw;
         border: 1px solid white;
         border-radius: 4px;
         box-shadow: 0 3px 2px rgba(0, 0, 0, 0.15);
       }
   
       img {
-
+        max-width: 100vw;
       }
   
       video {
-
+        min-width: fit-content;
+        width: 100%;
+        height: auto;
       }
     
     }
